cabal-version:      3.0

author:             NamorNiradnug
build-type:         Simple
category:           Language
description:        Fucking one's brain with the power of Monads.
license-file:       LICENSE
license:            MIT
maintainer:         roma57linux@gmail.com
name:               brainfuck-hs
synopsis:           Optimizing brainfuck interpreter
version:            0.1.0.0

source-repository head
    type: git
    location: https://github.com/NamorNiradnug/brainfuck-hs.git

common warnings
    ghc-options: -Wall -Wno-name-shadowing -Wno-incomplete-uni-patterns

library
    import: warnings

    exposed-modules:
        Brainfuck,
        Brainfuck.Compiler,
        Brainfuck.Executor,
        Brainfuck.Interpreter,
        Brainfuck.Parser,
        Brainfuck.Runtime,
        Brainfuck.Runtime.IO,
        Brainfuck.Runtime.Pure,

    other-modules:
        Brainfuck.Utils.Offset,
        Brainfuck.Runtime.STTape,

    default-extensions:
        LambdaCase,
        RecordWildCards,
        Safe,

    build-depends:
        array ^>=0.5.8,
        base ^>=4.21,
        parsec ^>=3.1.18,
        transformers ^>= 0.6.3,

    hs-source-dirs: src

    default-language: Haskell2010

executable brainfuck-hs
    import:           warnings

    main-is:          Main.hs

    default-extensions:
        ApplicativeDo,
        RecordWildCards,
        Safe,

    build-depends:
        base ^>=4.21,
        optparse-applicative ^>= 0.19,
        brainfuck-hs

    hs-source-dirs:   app

    default-language: Haskell2010

test-suite brainfuck-hs-test
    import:           warnings

    default-language: Haskell2010

    default-extensions:
        RecordWildCards

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    other-modules:
        Tests.Compiler,
        Tests.Executor,
        Tests.Interpreter,
        Tests.Parser,
        Tests.Examples,

    build-depends:
        base ^>=4.21,
        brainfuck-hs,
        hspec ^>=2.11.17,
        tasty ^>=1.5.4,
        tasty-hspec ^>=1.2.0.4,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11.1,
